# exchange-mcp-server

./: .env.example  .gitignore  README.md  __init__.py  __main__.py  config.py  exchange_docs.txt  pyproject.toml  run-exchange-mcp.sh  server.py  spec.md  test_server.py
endpoints/: __init__.py  datasets.py  plant.py  spatial.py  weather.py
